add gmail credential file

--- a/ReadEmails/ReadEmails.csproj
+++ b/ReadEmails/ReadEmails.csproj
@@ -70,6 +70,9 @@
     <None Include="credentials.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="credentials.json.org">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
