refactor to allow params to be passed in to GetEnumerator

--- a/Caller/Caller.csproj
+++ b/Caller/Caller.csproj
@@ -55,7 +55,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TextFile1.txt" />
+    <Content Include="msaccess consumer.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
