--- a/Caller/Caller.csproj
+++ b/Caller/Caller.csproj
@@ -32,8 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ReadEmail_DLL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="ReadEmail_DLL">
       <HintPath>..\ReadEmail_DLL\bin\Debug\ReadEmail_DLL.dll</HintPath>
     </Reference>
     <Reference Include="System" />
